--- a/project_conf/app/templates/base/nav.html
+++ b/project_conf/app/templates/base/nav.html
@@ -1,3 +1,14 @@
 {% block content %}
 
+
+
+
 {% endblock content %}
+
+<!-- 
+
+exemplo de link entre as páginas
+
+    href='{% url 'home' %}'
+    
+-->
