--- a/project_conf/app/templates/home.html
+++ b/project_conf/app/templates/home.html
@@ -1,3 +1,17 @@
 {% include 'base/nav.html' %}
 
-<h1>Aqui é onde o filho chora e a mãe não vê</h1>
+{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Aqui é onde o filho chora e a mãe não vê</h1>
+</body>
+</html>
+
+{% endblock content %}
