termino das funções e telas
Co-authored-by: Rafael  lobo <RafaelLobox@users.noreply.github.com>
Co-authored-by: Maria Fernanda <fernandaguedess@users.noreply.github.com>

--- a/project_conf/app/templates/base/footer.html
+++ b/project_conf/app/templates/base/footer.html
@@ -1,7 +1,21 @@
 {% block content %}
 
 
-
-
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/style.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'><!--Link BOXICONS-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/><!--Link Swiper's CSS-->
+</head>
+<body>
+    <footer>
+        <div class="copyright">
+            <small>&copy; Copyright: 2022 por Hospital Help.Me. Todos os diretos reservados. |  Dr. Weslley Rendrick Guedes
+        </div>
+    </footer>
+</body>
 {% endblock content %}
