--- a/project_conf/app/templates/doctor.html
+++ b/project_conf/app/templates/doctor.html
@@ -1,6 +1,6 @@
-{% include 'base/nav.html' %}
 
 {% block content %}
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -8,62 +8,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro de Médicos</title>
+    <title>Cadastro de medicos</title>
     <link rel="stylesheet" href="/static/css/doctor.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
   </head>
   <body>
     
-    <div>
-        <form>
-            <!-- 2 column grid layout with text inputs for the first and last names -->
-            <div class="row mb-4">
-              <div class="col">
-                <div class="form-outline">
-                  <input type="text" id="form6Example1" class="form-control" />
-                  <label class="form-label" for="form6Example1">First name</label>
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-outline">
-                  <input type="text" id="form6Example2" class="form-control" />
-                  <label class="form-label" for="form6Example2">Last name</label>
-                </div>
-              </div>
-            </div>
+    <div id="tabela" class="p-3 mb-2 bg-gradient-primary text-white">
+        
+      <table>
+        <thead>
+      <tr>
+        <th>Nome</th>
+        <th>Especialidade</th>
+        <th>CRM</th>
+        <th>CPF</th>
+        <th>Tel</th>
+      </thead>
+    <tbody>
+      {% for i in doc %}
+      <tr>
+        <td>{{i.nome}}</td>
+        <td>{{i.espec}}</td>
+        <td>{{i.crm}}</td>
+        <td>{{i.cpf}}</td>
+        <td>{{i.tel}}</td>
+        <td><a href="{% url 'del_doctor' i.crm %}" onclick="return confirm('Deseja mesmo excluir?')">DELETE</a></td>
+      </tr>
+      {% endfor %}
+        </tbody>
+        </table>
           
-            <!-- Text input -->
-            <div class="form-outline mb-4">
-              <input type="text" id="form6Example3" class="form-control" />
-              <label class="form-label" for="form6Example3">Specialty</label>
-            </div>
-          
-            <!-- Text input -->
-            <div class="form-outline mb-4">
-              <input type="text" id="form6Example4" class="form-control" />
-              <label class="form-label" for="form6Example4">CPF</label>
-            </div>
-          
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="form6Example5" class="form-control" />
-              <label class="form-label" for="form6Example5">CRM</label>
-            </div>
-          
-            <!-- Number input -->
-            <div class="form-outline mb-4">
-              <input type="number" id="form6Example6" class="form-control" />
-              <label class="form-label" for="form6Example6">Phone</label>
-            </div>
-          
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">Cadastrar</button>
-          </form>
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
 
-
 {% endblock content %}
+{% include 'base/footer.html' %}
+
+
