--- a/project_conf/app/templates/home.html
+++ b/project_conf/app/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,3 +15,4 @@
 </html>
 
 {% endblock content %}
+{% include 'base/footer.html' %}
