--- a/project_conf/app/templates/login_admin.html
+++ b/project_conf/app/templates/login_admin.html
@@ -20,59 +20,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="static/css/login.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link href="/static/css/login.css" rel="stylesheet" />
 </head>
-    <body>
-        <section class="vh-100 gradient-custom">
-            <div class="container py-5 h-100">
-              <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                  <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                    <div class="card-body p-5 text-center">
-          
-                      <div class="mb-md-5 mt-md-4 pb-5">
-          
-                        <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                        <p class="text-white-50 mb-5">Please enter your login and password!</p>
-                    <form method="POST" action="">
-                            {% csrf_token %}
-                        <div class="form-outline form-white mb-4">
-                          <input type="text" name="login" id="typeEmailX" class="form-control form-control-lg" />
-                          <label class="form-label" for="typeEmailX">Email</label>
-                        </div>
-          
-                        <div class="form-outline form-white mb-4">
-                          <input type="password" name="senha" id="typePasswordX" class="form-control form-control-lg" />
-                          <label class="form-label" for="typePasswordX">Password</label>
-                        </div>
-          
-                        <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-          
-                        <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-                    </form>
-                        <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                          <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                          <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                          <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                        </div>
-          
-                      </div>
-          
-                      <div>
-                        <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-                        </p>
-                      </div>
-          
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    </body>
+<body>
+  <div class="center">
+    <h1>Login</h1>
+    <form method="POST" action="">
+      {% csrf_token %}
+      <div class="txt_field">
+        <input name="cpf" type="text" required>
+        <span></span>
+        <Label>CPF</Label>
+      </div>
+      <div class="txt_field">
+        <input name="senha" type="password" required>
+        <span></span>
+        <Label>Senha</Label>
+      </div>
+      <div class="pass"> Esqueceu a Senha?</div>
+      <input type="submit" value="Login">
+      <div class="signup_link">
+        Não está cadastrado? <a href="">Cadastre-se</a>
+      </div>
+    </form>
+  </div>
+  
+</body>
 </html>
-
 {% endblock content %}
