--- a/project_conf/app/templates/paciente.html
+++ b/project_conf/app/templates/paciente.html
@@ -11,12 +11,12 @@
     <title>Cadastro de Pacientes</title>
     <link rel="stylesheet" href="/static/css/paciente.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="">
   </head>
   <body>
     
     <div>
-        <form>
+        <form class="p-3 mb-2 bg-info text-dark">
             <!-- 2 column grid layout with text inputs for the first and last names -->
             <div class="row mb-4">
               <div class="col">
@@ -33,13 +33,18 @@
               </div>
             </div>
           
-            <!-- Text input -->
+            
             <div class="form-outline mb-4">
               <input type="text" id="form6Example3" class="form-control" />
               <label class="form-label" for="form6Example3">Address</label>
             </div>
-          
-            <!-- Text input -->
+            
+            <div class="form-outline mb-4">
+              <input type="date" id="form6Example3" class="form-control" />
+              <label class="form-label" for="form6Example3">Birthday</label>
+            </div>
+
+            
             <div class="form-outline mb-4">
               <input type="text" id="form6Example4" class="form-control" />
               <label class="form-label" for="form6Example4">CPF</label>
