--- a/project_conf/app/static/scss/_nav.scss
+++ b/project_conf/app/static/scss/_nav.scss
@@ -1,7 +1,7 @@
 nav {
     width: 100vw;
     height: 5rem;
-    position: fixed;
+    position: absolute;
     z-index: 10;
     display: grid;
     place-items: center;
