--- a/project_conf/app/static/scss/style.scss
+++ b/project_conf/app/static/scss/style.scss
@@ -1,10 +1,10 @@
-@import "./partials/config";
-@import "./partials/mixins";
-@import "./partials/general";
-@import "./partials/nav";
-@import "./partials/header";
-@import "./partials/services";
-@import "./partials/doctors";
-@import "./partials/testimonials";
-@import "static/scss/appointments";
-@import "./partials/footer";
+@import "/static/css/config";
+@import "/static/css/mixins";
+@import "/static/css/general";
+@import "/static/css/nav";
+@import "/static/css/header";
+@import "/static/css/services";
+@import "/static/css/doctors";
+@import "/static/css/testimonials";
+@import "/static/scss/appointments";
+@import "/static/css/footer";
