--- a/project_conf/app/templates/doctor.html
+++ b/project_conf/app/templates/doctor.html
@@ -1,5 +1,7 @@
+{% include 'base/nav.html' %}
 
 {% block content %}
+
 
 
 <!DOCTYPE html>
@@ -8,43 +10,153 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro de medicos</title>
-    <link rel="stylesheet" href="/static/css/doctor.css">
+    
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <title>Médicos</title>
+
   </head>
   <body>
+    <div class="container">
+      <div class="text-center">
+        <h1>Médicos</h1>
+      </div>
+      <div class="text-end">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Cadastrar
+        </button>
+      </div>
+   </div>
     
-    <div id="tabela" class="p-3 mb-2 bg-gradient-primary text-white">
-        
-      <table>
+
+    <div  class="container mt-5">
+      <table id="doctor" class="table table-striped" style="width:100%">
         <thead>
-          <tr>
-          <th>Nome</th>
-          <th>Especialidade</th>
-          <th>CRM</th>
-          <th>CPF</th>
-          <th>Tel</th>
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>Especialidade</th>
+              <th>CRM</th>
+              <th>CPF</th>
+              <th>Tel</th>
+              <th></th>
+            </tr>
         </thead>
-    <tbody>
-      {% for i in doc %}
-      <tr>
-        <td>{{i.nome}}</td>
-        <td>{{i.espec}}</td>
-        <td>{{i.crm}}</td>
-        <td>{{i.cpf}}</td>
-        <td>{{i.tel}}</td>
-        <td><a href="{% url 'del_doctor' i.crm %}" onclick="return confirm('Deseja mesmo excluir?')">DELETE</a></td>
-      </tr>
-      {% endfor %}
+        <tbody>
+          {% for i in doc %}
+          <tr>
+            <td>{{i.id}}</td>
+            <td>{{i.nome}}</td>
+            <td>{{i.espec}}</td>
+            <td>{{i.crm}}</td>
+            <td>{{i.cpf}}</td>
+            <td>{{i.tel}}</td>
+            <td><a class="btn btn-danger" href="{% url 'del_doctor' i.cpf %}" onclick="return confirm('Deseja mesmo excluir?')">Deletar</a></td>
+          </tr>
+        {% endfor %}
         </tbody>
-        </table>
-          
+      </table>
     </div>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
+    <!-- <div class="text-center">
+      <button type="button" class="btn btn-primary pd-23" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Cadastrar
+      </button>
+      
+    </div> -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cadastro de médicos</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        
+          <form method="POST" action="">
+            {% csrf_token %}
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <div class="row mb-4">
+              <div class="col">
+                <div class="form-outline">
+                  <input type="text" name="nome"  class="form-control" />
+                  <label class="form-label" >Nome</label>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-outline">
+                  <input type="text" name="espec"  class="form-control" />
+                  <label class="form-label" >Especialidade</label>
+                </div>
+              </div>
+            </div>
+          
+            <!-- Text input -->
+            <div class="form-outline mb-4">
+              <input type="text" name="crm"  class="form-control" />
+              <label class="form-label" >CRM</label>
+            </div>
+          
+            <!-- Text input -->
+            <div class="form-outline mb-4">
+              <input type="text" name="cpf"  class="form-control" />
+              <label class="form-label" >CPF</label>
+            </div>
+          
+            <!-- Number input -->
+            <div class="form-outline mb-4">
+              <input type="tel" name="tel" class="form-control" />
+              <label class="form-label" >Telefone</label>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <input type="submit" value="Cadastrar" class="btn btn-primary">
+            </div>
+          </form>
+          
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+    
+
+  
+
+  
+  <script>$(document).ready(function() {
+    $('#doctor').DataTable( {
+        dom: 'Bfrtip',
+        buttons: [
+            'copyHtml5',
+            'excelHtml5',
+            'csvHtml5',
+            'pdfHtml5'
+        ]
+    } );
+} );</script>
+
+</body>
+
 </html>
 
 {% endblock content %}
-{% include 'base/footer.html' %}
+
 
 
