--- a/project_conf/app/templates/home.html
+++ b/project_conf/app/templates/home.html
@@ -1,18 +1,145 @@
 {% include 'base/nav.html' %}
 
 {% block content %}
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Aqui é onde o filho chora e a mãe não vê</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/paciente.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <title>Consultas</title>
+
+  </head>
+  <body>
+ 
+    <div class="container">
+        <div class="text-center">
+          <h1>Consultas</h1>
+        </div>
+        <div class="text-end">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Cadastrar
+          </button>
+        </div>
+     </div>
+
+    <div  class="container mt-5">
+      <table id="consultas" class="table table-striped" style="width:100%">
+        <thead>
+            <tr>
+              <th>Consulta</th>
+              <th>Médico</th>
+              <th>Paciente</th>
+              <th>Data</th>
+              <th>Hora</th>
+              <th></th>
+            </tr>
+        </thead>
+        <tbody>
+          {% for i in con %}
+          <tr>
+            <td>{{i.id}}</td>
+            <td>{{i.Doctor}}</td>
+            <td>{{i.Paciente}}</td>
+            <td>{{i.data}}</td>
+            <td>{{i.hora}}</td>
+            <td><a class="btn btn-danger" href="" onclick="return confirm('Deseja mesmo excluir?')">Deletar</a></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Marcação de consulta</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+          <form method="POST" action="">
+            {% csrf_token %}
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <label >Médico</label>
+            <select name="doctor" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                {% for i in doctor %}
+                <option value="{{ i.nome }}">{{ i.nome }}</option>
+                {% endfor %}
+            </select>
+            <br>
+            
+            <label >Paciente</label>
+            <select name="paciente" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                {% for i in paciente %}
+                <option value="{{ i.nome }}">{{ i.nome }}</option>
+                {% endfor %}
+            </select>
+            <br>
+
+            <div class="row mb-4">
+              <div class="col">
+                <div class="form-outline">
+                  <input type="date" name="data"  class="form-control" />
+                  <label class="form-label">Data da consulta:</label>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-outline">
+                  <input type="time" name="hora"  class="form-control" />
+                  <label class="form-label">Hora da consulta:</label>
+                </div>
+              </div>
+            </div>
+          
+            
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <input type="submit" value="Cadastrar" class="btn btn-primary">
+            </div>
+          </form>
+          
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+  
+    <script>$(document).ready(function() {
+      $('#consultas').DataTable( {
+          dom: 'Bfrtip',
+          buttons: [
+              'copyHtml5',
+              'excelHtml5',
+              'csvHtml5',
+              'pdfHtml5'
+          ]
+      } );
+  } );</script>
+  </body>
 </html>
 
 {% endblock content %}
-{% include 'base/footer.html' %}
+
+
+
