--- a/project_conf/app/templates/paciente.html
+++ b/project_conf/app/templates/paciente.html
@@ -1,6 +1,6 @@
 {% include 'base/nav.html' %}
-
 {% block content %}
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -8,67 +8,136 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro de Pacientes</title>
     <link rel="stylesheet" href="/static/css/paciente.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/static/css/paciente.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <title>Pacientes</title>
+
   </head>
   <body>
+
+    <div class="container">
+      <div class="text-center">
+        <h1>Pacientes</h1>
+      </div>
+      <div class="text-end">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Cadastrar
+        </button>
+      </div>
+   </div>
     
-    <div>
-        <form class="p-3 mb-2 bg-info text-dark">
+
+    <div  class="container mt-5">
+      <table id="pacientes" class="table table-striped" style="width:100%">
+        <thead>
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>Genero</th>
+              <th>Cpf</th>
+              <th>Tel</th>
+              <th>Nascimento</th>
+              <th></th>
+            </tr>
+        </thead>
+        <tbody>
+          {% for i in pac %}
+          <tr>
+            <td>{{i.id}}</td>
+            <td>{{i.nome}}</td>
+            <td>{{i.genero}}</td>
+            <td>{{i.cpf}}</td>
+            <td>{{i.tel}}</td>
+            <td>{{i.nascimento}}</td>
+            <td><a class="btn btn-danger" href="{% url 'del_paciente' i.cpf %}" onclick="return confirm('Deseja mesmo excluir?')">Deletar</a></td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cadastro de pacientes</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+         
+          <form method="POST" action="">
+            {% csrf_token %}
             <!-- 2 column grid layout with text inputs for the first and last names -->
             <div class="row mb-4">
               <div class="col">
                 <div class="form-outline">
-                  <input type="text" id="form6Example1" class="form-control" />
-                  <label class="form-label" for="form6Example1">First name</label>
+                  <input type="text" name="nome" class="form-control" />
+                  <label class="form-label">Nome</label>
                 </div>
               </div>
               <div class="col">
                 <div class="form-outline">
-                  <input type="text" id="form6Example2" class="form-control" />
-                  <label class="form-label" for="form6Example2">Last name</label>
+                  <input type="text" name="genero" id="form6Example2" class="form-control" />
+                  <label class="form-label" for="form6Example2">Gênero</label>
                 </div>
               </div>
             </div>
           
-            
+            <!-- Text input -->
             <div class="form-outline mb-4">
-              <input type="text" id="form6Example3" class="form-control" />
-              <label class="form-label" for="form6Example3">Address</label>
-            </div>
-            
-            <div class="form-outline mb-4">
-              <input type="date" id="form6Example3" class="form-control" />
-              <label class="form-label" for="form6Example3">Birthday</label>
-            </div>
-
-            
-            <div class="form-outline mb-4">
-              <input type="text" id="form6Example4" class="form-control" />
-              <label class="form-label" for="form6Example4">CPF</label>
-            </div>
-          
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="form6Example5" class="form-control" />
-              <label class="form-label" for="form6Example5">Gender</label>
+              <input type="text" name="cpf" id="form6Example3" class="form-control" />
+              <label class="form-label" for="form6Example3">CPF</label>
             </div>
           
             <!-- Number input -->
             <div class="form-outline mb-4">
-              <input type="number" id="form6Example6" class="form-control" />
+              <input type="tel" name="tel" id="form6Example6" class="form-control" />
               <label class="form-label" for="form6Example6">Phone</label>
             </div>
-          
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">Cadastrar</button>
-          </form>
-    </div>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</html>
 
+            <!-- Text input -->
+            <div class="form-outline mb-4">
+              <input type="date" name="nascimento" id="form6Example4" class="form-control" />
+              <label class="form-label" for="form6Example4">Data de nascimento</label>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <input type="submit" value="Cadastrar" class="btn btn-primary"></input>
+            </div>
+          
+          </form>
+          
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+    <script>$(document).ready(function() {
+      $('#pacientes').DataTable( {
+          dom: 'Bfrtip',
+          buttons: [
+              'copyHtml5',
+              'excelHtml5',
+              'csvHtml5',
+              'pdfHtml5'
+          ]
+      } );
+  } );</script>
+  </body>
+</html>
 
 {% endblock content %}
